--- a/styles/Portfolio.css
+++ b/styles/Portfolio.css
@@ -5,6 +5,8 @@
   font-variation-settings:
     "wdth" 100;
 }
+/* shared styles */
+
 .text-primary{
     color:#FD6E0A;   
 }
@@ -21,13 +23,22 @@
     font-weight: bold;
     padding: 20px 35px;
 }
-
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+/* header styles */
 header{
     background-image: url('../images/developer.png'),url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left,bottom right;
 }
-/* shared styles */
+/* nav styles */
 nav {
     display: flex;
     text-align: center;
@@ -77,4 +88,31 @@ nav li a{
 }
 .banner-profile-pic{
     width: 580px;
+}
+
+/* main styles */
+main{
+ max-width: 1140px;
+ margin: 0 auto;
+}
+main section{
+    margin-bottom: 130px;
+    margin-top: 130px;
+}
+/* about styles */
+.about{
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600px;
+}
+.secondary-bg{
+    border-radius: 10px;
+    background: #FFF8F3;
 }
