--- a/styles/Portfolio.css
+++ b/styles/Portfolio.css
@@ -120,23 +120,22 @@ main section {
 /* about styles */
 .about {
     border-radius: 10px;
+    background: #FFF8F3;
     padding: 130px 150px;
     text-align: center;
+    margin-top: 230px;
 }
 
 .about-items {
     display: flex;
     justify-content: space-around;
+   
 }
-
+.about-item{
+    text-align: center;
+}
 .item-description {
     font-weight: 600px;
-}
-
-.secondary-bg {
-    border-radius: 10px;
-    background: #FFF8F3;
-    margin-top: 230px;
 }
 
 /* section styles */
@@ -203,4 +202,38 @@ main section {
 .resume-item-description{
     font-size: 16px;
     color: #757575;
+}
+.resume-container hr{
+    margin: 30px;
+}
+
+.Download-cv{
+    text-align: center;
+    margin-top: 120px;
+}
+
+/* footer styles */
+.footer-container{
+    display: flex;
+    background-color: #FFF8F3; 
+    margin-top: 150px;
+    padding: 130px 200px;
+    gap: 150px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-links{
+    margin-right:25px;
+}
+.contact input[type=text],.contact input[type=email], textarea{
+     display: block;
+     margin-bottom: 30px;
+     padding: 25px 35px;
+     color: #757575;
+     border-radius: 5px;
+     border: 0;
+     background:#FFF;
+     width: 100%;
+
 }
